Testing the photo

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-1.1/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-1.1/highlight.js"></script>
+<link href="site_libs/font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet" />
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -190,7 +191,12 @@ $(document).ready(function () {
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        
+        <li>
+  <a href="mailto:danieltregeagle@gmail.com">
+    <span class="fa fa-envelope-o fa-lg"></span>
+     
+  </a>
+</li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
@@ -205,7 +211,19 @@ $(document).ready(function () {
 </div>
 
 
+<div class="figure">
+<img src="./danielTregeaglePicture1.jpg" alt="optional caption text" />
+<p class="caption">optional caption text</p>
+</div>
+<!-- <img align="right" src="./photos/danielTregeaglePicture1.jpg" width = "300"> -->
+<div id="post-doctoral-scholar" class="section level3">
+<h3>Post-Doctoral Scholar</h3>
+<div id="department-of-agricultural-and-resource-economics-uc-davis" class="section level4">
+<h4>Department of Agricultural and Resource Economics, UC Davis</h4>
+<p><br> <!-- <br> --> <!-- <br> --> <!-- <br> --></p>
 <p>Hello, Website!</p>
+</div>
+</div>
 
 
 
