Adding text to index and research pages; adding CV

--- a/cv.html
+++ b/cv.html
@@ -211,7 +211,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>CV page under construction</p>
+<p><a href="files/tregeagleCV_Aug2017.pdf">CV Download Link</a></p>
 
 
 
