--- a/teaching.html
+++ b/teaching.html
@@ -212,6 +212,9 @@ $(document).ready(function () {
 
 
 <p>Teaching page under construction</p>
+<!-- [Write up teaching paragraph--perhaps extract from Teaching Portfolio] -->
+<!-- I won the Outstanding Graduate Student Instructor Award -->
+<!-- earned and the Certificate of Teaching and Learning in Higher Education UC Berkeley. -->
 
 
 
