--- a/research.html
+++ b/research.html
@@ -211,7 +211,16 @@ $(document).ready(function () {
 </div>
 
 
-<p>Research page under construction</p>
+<!-- Research page under construction -->
+<p>My dissertation, <a href="https://search.proquest.com/openview/8a0410c763dd2cbd11235ab3588a1050/1.pdf?pq-origsite=gscholar&amp;cbl=18750&amp;diss=y">The Dynamics of Perennial Crop Production and Processing</a>, focused on the economics of perennial crop production, with applications to Brazilian sugarcane and the expansion of the Brazilian biofuel industry.</p>
+<p>My current projects include:</p>
+<ul>
+<li>Analyzing the expected costs of proposed Californian pesticide use regulations</li>
+<li>Examining the drivers of boom and bust cycles in perennial crop industries <!-- * Investigating how the incentives for agricultural industry collective action are affected by the life-cycle of the industry's crop --></li>
+<li>Investigating how a crop’s life-cycle influences growers’ decision making, including incentives for collective action and vertical coordination</li>
+</ul>
+<p><!-- driving producer organization fund allocation (how do they spend their money?) --> <!-- * Crop life cycle affects the incentives for industry collective action --></p>
+<p>Prior to beginning my Ph.D. I worked at the <a href="http://www.agriculture.gov.au/abares">Australian Bureau of Agricultural and Resource Economics and Sciences</a> analyzing Australian irrigation policy and the Murray-Darling Basin Plan.</p>
 
 
 
