Updating CV to September 2018 and adding one page CV

--- a/cv.html
+++ b/cv.html
@@ -211,7 +211,8 @@ $(document).ready(function () {
 </div>
 
 
-<p><a href="files/tregeagleCV_2018Jun.pdf">CV Download Link</a></p>
+<p><a href="files/tregeagleCV_2018_09_OnePage.pdf">One Page CV</a></p>
+<p><a href="files/tregeagleCV_2018_08.pdf">CV Download Link</a></p>
 
 
 
