Updating teaching page

--- a/teaching.html
+++ b/teaching.html
@@ -211,10 +211,50 @@ $(document).ready(function () {
 </div>
 
 
-<p>Teaching page under construction</p>
+<!-- Teaching page under construction -->
+<p>I have had considerable teaching experience, having taught from the second year of my undergraduate program through to the end of my PhD. As a graduate student instructor (TA) at Berkeley, I received an Outstanding Graduate Student Instructor award, a Certificate of Teaching and Learning in Higher Education, and was invited to train new quantitative social science GSIs at a pre-semester, campus-wide teaching conference. As an undergraduate I served for three years as a Peer Assisted Study Session Facilitator (similar to TA) for introductory micro- and macroeconomics, during which time I received a ‘Most Valuable Facilitator’ award and helped develop a new anti-plagiarism module, the results of which I presented at a national conference. I will be pleased to provide a teaching portfolio, including a statement of teaching philosophy and student reviews, upon request.</p>
+<p> </p>
+<div id="certificate" class="section level2">
+<h2>Certificate</h2>
+<p>I received a <a href="https://gsi.berkeley.edu/programs-services/certificate-program/">Certificate of Teaching and Learning in Higher Education</a> from UC Berkeley in 2017. The requirements of the certificate are:</p>
+<ul>
+<li>Participation in the all-day Teaching Conference for First-Time GSIs at UC Berkeley</li>
+<li>Successful completion of a 300-level course on pedagogy that has been approved for the Certificate Program in the relevant discipline</li>
+<li>Successful completion of the GSI Professional Standards and Ethics Online Course</li>
+<li>Participation in six qualifying Workshops on Teaching</li>
+<li>At least two semesters of teaching as a GSI at UC Berkeley</li>
+<li>GSI classroom teaching observation by, and consultation with, a faculty mentor</li>
+<li>Development of a course syllabus that you have designed</li>
+<li>Use of mid-semester teaching evaluations</li>
+<li>Creation of a teaching portfolio (<em>available on request</em>)</li>
+</ul>
+<p> </p>
+</div>
+<div id="awards" class="section level2">
+<h2>Awards</h2>
+<ul>
+<li><p>Outstanding Graduate Student Instructor Award, UC Berkeley, Fall 2013.</p></li>
+<li><p>Most Valuable Facilitator Award (Facilitator’s Choice), Peer-Assisted Students Sessions (PASS) Program, Winter Semester, 2009.</p></li>
+</ul>
+<p> </p>
+</div>
+<div id="experience" class="section level2">
+<h2>Experience</h2>
+<ul>
+<li><p>Instructor, Master of Development Practice Math Bootcamp, UC Berkeley, Summer 2014–2017 (4 summers).</p></li>
+<li><p>Discipline-Cluster Workshop Leader for Quantitative Social Sciences, UC Berkeley GSI Teaching Conference, Spring 2017.</p></li>
+<li><p>Teaching Assistant, <em>Dynamic Modeling</em> (ARE 298; a 2 week intensive course) for Prof. Christian Traeger, April 2015.</p></li>
+<li><p>Graduate Student Instructor, <em>Mathematical Methods for Agricultural and Resource Economics</em> (ARE211) for Prof. Leo Simon, UC Berkeley, Fall 2014.</p></li>
+<li><p>Graduate Student Instructor, <em>The Economics of Climate Change</em> (EEP 175) for Prof. Christian Traeger, UC Berkeley, Fall 2013.</p></li>
+<li><p>ARE Departmental Tutor, <em>Mathematical Tools for Economists</em> (ECON 204), UC Berkeley, Summer 2013.</p></li>
+<li><p>Teaching Assistant, <em>Introduction to Resource Economics</em> (RSEC1031) for Prof. Michael Harris, University of Sydney, Aug–Nov 2010.</p></li>
+<li><p>Peer-Assisted Study Session Facilitator for <em>Introductory Micro- and Macroeconomics</em>, University of Sydney, 2008–2010 (6 semesters).</p></li>
+<li><p>Video Peer Assisted Study Session Facilitator for an Anti-plagiarism Component of <em>Business in the Global Environment</em>, University of Sydney, 2009–2010 (2 semesters).</p></li>
+</ul>
 <!-- [Write up teaching paragraph--perhaps extract from Teaching Portfolio] -->
 <!-- I won the Outstanding Graduate Student Instructor Award -->
 <!-- earned and the Certificate of Teaching and Learning in Higher Education UC Berkeley. -->
+</div>
 
 
 
