Updating Full CV link

--- a/cv.html
+++ b/cv.html
@@ -212,7 +212,7 @@ $(document).ready(function () {
 
 
 <p><a href="files/tregeagleCV_2018_09_OnePage.pdf">One Page CV</a></p>
-<p><a href="files/tregeagleCV_2018_08.pdf">CV Download Link</a></p>
+<p><a href="files/tregeagleCV_2018_08.pdf">Full CV</a></p>
 
 
 
