Adding OMO draft and updating profile photo

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <title>Daniel Tregeagle, Ph.D.</title>
 
+<script src="site_libs/header-attrs-2.3/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/yeti.min.css" rel="stylesheet" />
@@ -308,7 +309,7 @@ $(document).ready(function () {
 </div>
 
 
-<p><img align="right" src="photos/danielTregeaglePicture1.jpg" width = "300"></p>
+<p><img align="right" src="photos/danielTregeaglePicture2.JPG" width = "300"></p>
 <div id="assistant-professor-and-extension-specialist" class="section level3">
 <h3>Assistant Professor and Extension Specialist</h3>
 <p><br></p>
