Justifying text, adding floats and extension webpage

--- a/index.html
+++ b/index.html
@@ -285,6 +285,9 @@ $(document).ready(function () {
   <a href="teaching.html">Teaching</a>
 </li>
 <li>
+  <a href="extension.html">Extension</a>
+</li>
+<li>
   <a href="cv.html">CV</a>
 </li>
       </ul>
@@ -309,7 +312,14 @@ $(document).ready(function () {
 </div>
 
 
-<p><img align="right" src="photos/danielTregeaglePicture2.JPG" width = "300"></p>
+<style>
+body {
+text-align: justify}
+</style>
+<style type="text/css">
+.floatRight{float:right;margin-left:40px;margin-bottom:500px}
+</style>
+<p><img class="floatRight" src="photos/danielTregeaglePicture2.JPG" width = "300"></p>
 <div id="assistant-professor-and-extension-specialist" class="section level3">
 <h3>Assistant Professor and Extension Specialist</h3>
 <p><br></p>
