--- a/research.html
+++ b/research.html
@@ -285,6 +285,9 @@ $(document).ready(function () {
   <a href="teaching.html">Teaching</a>
 </li>
 <li>
+  <a href="extension.html">Extension</a>
+</li>
+<li>
   <a href="cv.html">CV</a>
 </li>
       </ul>
@@ -309,6 +312,10 @@ $(document).ready(function () {
 </div>
 
 
+<style>
+body {
+text-align: justify}
+</style>
 <!-- Research page under construction -->
 <p>My dissertation, <a href="https://search.proquest.com/openview/8a0410c763dd2cbd11235ab3588a1050/1.pdf?pq-origsite=gscholar&amp;cbl=18750&amp;diss=y">The Dynamics of Perennial Crop Production and Processing</a>, focused on the economics of perennial crop production, with applications to Brazilian sugarcane and the expansion of the Brazilian biofuel industry.</p>
 <div id="working-papers" class="section level2">
@@ -319,6 +326,10 @@ $(document).ready(function () {
 <p><!-- * Analyzing the expected costs of proposed Californian pesticide use regulations --> <!-- * Examining the drivers of boom and bust cycles in perennial crop industries --> <!-- * Investigating how the incentives for agricultural industry collective action are affected by the life-cycle of the industry's crop --> <!-- * Investigating how a crop's life-cycle influences growers' decision making, including incentives for collective action and vertical coordination --></p>
 <p><!-- driving producer organization fund allocation (how do they spend their money?) --> <!-- * Crop life cycle affects the incentives for industry collective action --></p>
 <!-- Prior to beginning my Ph.D. I worked at the [Australian Bureau of Agricultural and Resource Economics and Sciences](http://www.agriculture.gov.au/abares) analyzing Australian irrigation policy and the Murray-Darling Basin Plan. -->
+<p><br></p>
+<p><br></p>
+<p><br></p>
+<p><img align="center" src="photos/MagicSweetPotatoForest.JPG" width = "600" title="Tregeagle conducting fieldwork"></p>
 </div>
 
 
