Aligning title photo position with text

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ body {
 text-align: justify}
 </style>
 <style type="text/css">
-.floatRight{float:right;margin-left:40px;margin-bottom:500px}
+.floatRight{float:right;margin-left:40px;margin-bottom:500px;margin-top:75px}
 </style>
 <p><img class="floatRight" src="photos/danielTregeaglePicture2.JPG" width = "300"></p>
 <div id="assistant-professor-and-extension-specialist" class="section level3">
