Adding works in progress and ECG700

--- a/research.html
+++ b/research.html
@@ -321,11 +321,16 @@ text-align: justify}
 <div id="working-papers" class="section level2">
 <h2>Working Papers</h2>
 <p><a href="files/OptimalManagementOfOrchards_200909.pdf">Optimal Management of Orchards</a> (with Leo Simon)</p>
-<p><em>Abstract</em>: A fundamental issue in perennial crop economics is finding the optimal time to replace trees in an orchard. Orchards have two key characteristics: they consist of trees of multiple vintages, and the trees have a non-monotonic yield curve. We present the first analysis of optimal tree replacement in an orchard that has both characteristics. Our results show that cyclical production is optimal in the long-run, and that optimally managed orchards converge to the long-run cycle surprisingly quickly. Our results have implications for orchard valuation, orchard planting, and orchard conversion. We are also the first to provide comparative statics on the long-run cycle radius. In addition, forest management is a natural point of comparison to orchard management. We contrast the optimal replacement rules for orchards and forests to show the qualitative differences.</p>
-<!-- My current projects include: -->
-<p><!-- * Analyzing the expected costs of proposed Californian pesticide use regulations --> <!-- * Examining the drivers of boom and bust cycles in perennial crop industries --> <!-- * Investigating how the incentives for agricultural industry collective action are affected by the life-cycle of the industry's crop --> <!-- * Investigating how a crop's life-cycle influences growers' decision making, including incentives for collective action and vertical coordination --></p>
-<p><!-- driving producer organization fund allocation (how do they spend their money?) --> <!-- * Crop life cycle affects the incentives for industry collective action --></p>
-<!-- Prior to beginning my Ph.D. I worked at the [Australian Bureau of Agricultural and Resource Economics and Sciences](http://www.agriculture.gov.au/abares) analyzing Australian irrigation policy and the Murray-Darling Basin Plan. -->
+<p><em>Abstract</em>: A fundamental issue in perennial crop economics is finding the optimal time to replace trees in an orchard. Orchards have two key characteristics: they consist of trees of multiple vintages, and the trees have a non-monotonic yield curve. We present the first analysis of optimal tree replacement in an orchard that has both characteristics. Our results show that cyclical production is optimal in the long-run, and that optimally managed orchards converge uniformly to the long-run cycle. Our results have implications for orchard valuation, orchard planting, and orchard conversion. We are also the first to provide comparative statics on the long-run cycle radius.</p>
+</div>
+<div id="works-in-progress" class="section level2">
+<h2>Works in progress</h2>
+<ul>
+<li>Identifying how optimizing average crop age can lower biorefinery costs when using perennial feedstocks</li>
+<li>Valuing improvements in crop traits for <em>cucurbits</em></li>
+<li>Reviewing methods of measuring economic impact for extension programs</li>
+<li>Assessing the state of specialty crop supply elasticity estimates (with Zoë Plakias)</li>
+</ul>
 <p><br></p>
 <p><br></p>
 <p><br></p>
