--- a/teaching.html
+++ b/teaching.html
@@ -346,6 +346,7 @@ text-align: justify}
 <div id="experience" class="section level2">
 <h2>Experience</h2>
 <ul>
+<li><p>Instructor, <em>Fundamentals of Microeconomics (ECG700)</em>, NC State, Fall 2020.</p></li>
 <li><p>Instructor, Master of Development Practice Math Bootcamp, UC Berkeley, Summer 2014–2017 (4 summers).</p></li>
 <li><p>Discipline-Cluster Workshop Leader for Quantitative Social Sciences, UC Berkeley GSI Teaching Conference, Spring 2017.</p></li>
 <li><p>Teaching Assistant, <em>Dynamic Modeling</em> (ARE 298; a 2 week intensive course) for Prof. Christian Traeger, April 2015.</p></li>
