Adding three extension articles and a report

--- a/extension.html
+++ b/extension.html
@@ -316,7 +316,27 @@ $(document).ready(function () {
 body {
 text-align: justify}
 </style>
-<p>Extension page currently under construction</p>
+<div id="extension-articles" class="section level1">
+<h1>Extension Articles</h1>
+<div id="specialty-crops-in-2020-covid-19-and-other-challenges" class="section level2">
+<h2><a href="files/Specialty-Crops-in-2020-COVID-19-and-Other-Challenges.pdf">Specialty Crops in 2020: COVID-19 and Other Challenges</a></h2>
+<p>In this Winter 2021 installment of the NC State Economist, Dr. Daniel Tregeagle highlights the impacts of Covid-19 on North Carolina’s specialty crop producers and markets. He also reveals the results of a recent survey of caneberry growers on the trends, challenges and opportunities in their specialty crop sector.</p>
+</div>
+<div id="implications-of-disrupting-a-perennial-crop-replanting-cycle-the-brazilian-sugarcane-example" class="section level2">
+<h2><a href="files/Tregeagle_Zilberman_2018_Implications%20of%20Disrupting%20a%20Perennial%20Crop%20Replanting%20Cycle.pdf">Implications of Disrupting a Perennial Crop Replanting Cycle: The Brazilian Sugarcane Example</a></h2>
+<p>Brazilian sugarcane yields declined sharply in 2011, ending a decade-long expansion of the industry. In the aftermath of the 2008 financial crisis, credit-constrained farmers replanted fewer sugarcane fields, leading to an increase in the average age of canes and a decline in yield several years later. Had average age remained constant over this period, industry revenues would have been around 10% higher in 2011 and 2012. This example shows how interruptions to the regular replanting schedules of a perennial crop can have production effects years into the future.</p>
+</div>
+<div id="economic-value-of-the-herbicide-dacthal-for-brassica-and-allium-crops-in-california" class="section level2">
+<h2><a href="files/Blecker%20et%20al%20(2018)%20-%20Economic%20Value%20of%20the%20Herbicide%20Dacthal%20for%20Brassica%20and%20Allium%20Crops%20in.pdf">Economic Value of the Herbicide Dacthal for Brassica and Allium Crops in California</a></h2>
+<p>California review of the herbicide dacthal triggered by the requirements of California’s Pesticide Contamination Prevention Act was conducted in 2018. This article estimates the economic effects a cancellation of dacthal’s California registration would have on brassica and allium crops. Statewide net revenue losses for broccoli, dry onion, and cabbage, the largest users of dacthal, are estimated at $25.4 million: $17.9 million for broccoli, $2.4 million for cabbage, and $5.1 million for onion.</p>
+</div>
+</div>
+<div id="reports" class="section level1">
+<h1>Reports</h1>
+<div id="a-report-on-narbas-2020-pricing-and-marketing-survey" class="section level2">
+<h2><a href="files/2020-Caneberry-Pricing-Survey-Report-Nov.pdf">A Report on NARBA’s 2020 Pricing and Marketing Survey</a></h2>
+</div>
+</div>
 
 
 
