Adding Horticulturae article. Fixing text spacing.

--- a/extension.html
+++ b/extension.html
@@ -13,8 +13,8 @@
 
 <title>Extension</title>
 
-<script src="site_libs/header-attrs-2.9/header-attrs.js"></script>
-<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
+<script src="site_libs/header-attrs-2.13/header-attrs.js"></script>
+<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/yeti.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
@@ -59,6 +59,7 @@ if (window.hljs) {
 
 
 
+
 <link rel="stylesheet" href="style.css" type="text/css" />
 
 
@@ -83,6 +84,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -235,7 +239,7 @@ $(document).ready(function () {
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbar" data-bs-target="#navbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -287,27 +291,31 @@ text-align: justify}
 </style>
 <div id="extension-articles" class="section level1">
 <h1>Extension Articles</h1>
-<div id="specialty-crops-in-2020-covid-19-and-other-challenges" class="section level2">
-<h2><a href="files/Specialty-Crops-in-2020-COVID-19-and-Other-Challenges.pdf">Specialty Crops in 2020: COVID-19 and Other Challenges</a></h2>
+<div id="specialty-crops-in-2020-covid-19-and-other-challenges" class="section level3">
+<h3><a href="files/Specialty-Crops-in-2020-COVID-19-and-Other-Challenges.pdf">Specialty Crops in 2020: COVID-19 and Other Challenges</a></h3>
 <p>In this Winter 2021 installment of the NC State Economist, Dr. Daniel Tregeagle highlights the impacts of Covid-19 on North Carolina’s specialty crop producers and markets. He also reveals the results of a recent survey of caneberry growers on the trends, challenges and opportunities in their specialty crop sector.</p>
+<p><br></p>
 </div>
-<div id="estimated-cost-of-the-withdrawal-of-the-insecticide-chlorpyrifos-for-six-major-california-crops" class="section level2">
-<h2><a href="files/Wei%20et%20al.%20-%20Estimated%20Cost%20of%20the%20Withdrawal%20of%20the%20Insecticid.pdf">Estimated Cost of the Withdrawal of the Insecticide Chlorpyrifos for Six Major California Crops</a></h2>
+<div id="estimated-cost-of-the-withdrawal-of-the-insecticide-chlorpyrifos-for-six-major-california-crops" class="section level3">
+<h3><a href="files/Wei%20et%20al.%20-%20Estimated%20Cost%20of%20the%20Withdrawal%20of%20the%20Insecticid.pdf">Estimated Cost of the Withdrawal of the Insecticide Chlorpyrifos for Six Major California Crops</a></h3>
 <p>In May 2019, the CA Department of Pesticide Regulation (DPR) initiated the cancellation of the pesticide chlorpyrifos. This article estimates the economic effects of cancellation on six major California crops. Statewide annual revenue losses are estimated at $11.5 million, averaged across acreage and pesticide use for three base years (2015–2017): $1.6 million for alfalfa, $0.6 million for almonds, $1 million for citrus, $7.1 million for cotton, $4.3 million for grapes, and $3.2 million for walnuts. In addition, gross revenue losses due to reduced cotton yields are estimated to be $6.3 million. Importantly, estimated losses are for only six crops. The total cost to California agriculture will be greater.</p>
+<p><br></p>
 </div>
-<div id="implications-of-disrupting-a-perennial-crop-replanting-cycle-the-brazilian-sugarcane-example" class="section level2">
-<h2><a href="files/Tregeagle_Zilberman_2018_Implications%20of%20Disrupting%20a%20Perennial%20Crop%20Replanting%20Cycle.pdf">Implications of Disrupting a Perennial Crop Replanting Cycle: The Brazilian Sugarcane Example</a></h2>
+<div id="implications-of-disrupting-a-perennial-crop-replanting-cycle-the-brazilian-sugarcane-example" class="section level3">
+<h3><a href="files/Tregeagle_Zilberman_2018_Implications%20of%20Disrupting%20a%20Perennial%20Crop%20Replanting%20Cycle.pdf">Implications of Disrupting a Perennial Crop Replanting Cycle: The Brazilian Sugarcane Example</a></h3>
 <p>Brazilian sugarcane yields declined sharply in 2011, ending a decade-long expansion of the industry. In the aftermath of the 2008 financial crisis, credit-constrained farmers replanted fewer sugarcane fields, leading to an increase in the average age of canes and a decline in yield several years later. Had average age remained constant over this period, industry revenues would have been around 10% higher in 2011 and 2012. This example shows how interruptions to the regular replanting schedules of a perennial crop can have production effects years into the future.</p>
+<p><br></p>
 </div>
-<div id="economic-value-of-the-herbicide-dacthal-for-brassica-and-allium-crops-in-california" class="section level2">
-<h2><a href="files/Blecker%20et%20al%20(2018)%20-%20Economic%20Value%20of%20the%20Herbicide%20Dacthal%20for%20Brassica%20and%20Allium%20Crops%20in.pdf">Economic Value of the Herbicide Dacthal for Brassica and Allium Crops in California</a></h2>
+<div id="economic-value-of-the-herbicide-dacthal-for-brassica-and-allium-crops-in-california" class="section level3">
+<h3><a href="files/Blecker%20et%20al%20(2018)%20-%20Economic%20Value%20of%20the%20Herbicide%20Dacthal%20for%20Brassica%20and%20Allium%20Crops%20in.pdf">Economic Value of the Herbicide Dacthal for Brassica and Allium Crops in California</a></h3>
 <p>California review of the herbicide dacthal triggered by the requirements of California’s Pesticide Contamination Prevention Act was conducted in 2018. This article estimates the economic effects a cancellation of dacthal’s California registration would have on brassica and allium crops. Statewide net revenue losses for broccoli, dry onion, and cabbage, the largest users of dacthal, are estimated at $25.4 million: $17.9 million for broccoli, $2.4 million for cabbage, and $5.1 million for onion.</p>
+<p><br></p>
 </div>
 </div>
 <div id="reports" class="section level1">
 <h1>Reports</h1>
-<div id="a-report-on-narbas-2020-pricing-and-marketing-survey" class="section level2">
-<h2><a href="files/2020-Caneberry-Pricing-Survey-Report-Nov.pdf">A Report on NARBA’s 2020 Pricing and Marketing Survey</a></h2>
+<div id="a-report-on-narbas-2020-pricing-and-marketing-survey" class="section level3">
+<h3><a href="files/2020-Caneberry-Pricing-Survey-Report-Nov.pdf">A Report on NARBA’s 2020 Pricing and Marketing Survey</a></h3>
 </div>
 </div>
 
