Updating TZ1 name, abstract and file

--- a/research.html
+++ b/research.html
@@ -315,13 +315,10 @@ text-align: justify}
 <p><em>Abstract</em>: A fundamental issue in perennial crop economics is finding the optimal time to replace trees in an orchard. Orchards have two key characteristics: they consist of trees of multiple vintages, and the trees have a non-monotonic yield curve. We present the first analysis of optimal tree replacement in an orchard that has both characteristics. Our results show that cyclical production is optimal in the long-run, and that optimally managed orchards converge uniformly to the long-run cycle. Our results have implications for orchard valuation, orchard planting, and orchard conversion. We are also the first to provide comparative statics on the long-run cycle radius.</p>
 <p><br></p>
 </div>
-<div id="managing-the-age-of-perennial-crops-for-processing-maximum-sustainable-yield-is-a-good-heuristic" class="section level3">
-<h3><a href="files/refineryRotationDraft_forPublication.pdf">Managing the age of perennial crops for processing: Maximum sustainable yield is a good heuristic</a></h3>
+<div id="minimizing-the-costs-of-biorefinery-processing-by-managing-perennial-crop-age-an-example-from-brazilian-sugarcane-ethanol" class="section level3">
+<h3><a href="files/TZ1.pdf">Minimizing the costs of biorefinery processing by managing perennial crop age: An example from Brazilian sugarcane ethanol</a></h3>
 <p>(with David Zilberman)</p>
-<p><em>Abstract</em>: The design of perennial crop supply chains requires an answer to the question: what is the optimal age to replace the crop? We present a novel theoretical framework to study optimal perennial crop age when the output is used as a feedstock for a processing facility. We prove that our model has a solution and generate analytical comparative statics with respect to facility size and cost parameters. To show the empirical robustness of these theoretical results, we calibrate simulations to the sugarcane industry in Sao Paulo, Brazil and the almond industry in California, showing that that the optimal age is very close to the maximum sustainable yield age. These results support the use of maximum sustainable yield as an important management heuristic, since the difference in cost between the two approaches is negligible and the MSY approach requires less, more easily obtainable information.</p>
-</div>
-<div id="section" class="section level3">
-<h3></h3>
+<p><em>Abstract</em>: We develop and analyze an unexplored mechanism to reduce biorefinery supply chain costs when the feedstock is a perennial crop: adjusting the age-structure, and hence yield, of the perennial feedstock. The non-monotonicity of the age-yield function introduces a non-convexity to the cost-minimization problem. We show that, despite this, the problem has a solution and present analytic and numeric comparative statics, finding that smaller refineries are most likely to benefit from optimizing age-structure. The model is calibrated to the sugarcane ethanol industry in the South-Central region of Brazil and shows that the cost-reductions from optimizing age, compared to maximum sustainable yield, are on the order of one percent. Generally, the magnitude of the cost reduction will depend on the life-cycle of the crop, the costs of growing and transporting the feedstock, and the size of the biorefinery.</p>
 <p><br> <br></p>
 </div>
 </div>
